k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calc-app
  template:
    metadata:
      labels:
        app: calc-app
    spec:
      containers:
      - name: yul-calcpy
        image: yuldi8/calcpy:latest
        ports:
          - containerPort: 5000
