k8s/svc-calc.yml
apiVersion: v1
kind: Service
metadata:
  name: calc-svc
spec:
  selector:
    app: calc-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
