k8s/ingress-calc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calc-svc
            port:
              number: 80
